fixes animation mobile menu

--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -120,17 +120,17 @@
 .header_mobile_menu {
     background-color: white;
     width: 100%;
-    height: 220px;
+    height: 200px;
     
     ul {
         list-style: none;
         display: flex;
         flex-direction: column;
-        all: initial;
         
     }
     li {  
-        padding: 10px 0;
+        width: 100%;
+        padding: 20px 0;
         text-align: center;
         width: 100%;
         font-family: "Open Sans";
